--- a/wp-content/themes/sorbaatlanta/style.css
+++ b/wp-content/themes/sorbaatlanta/style.css
@@ -832,10 +832,13 @@ table {
   position: fixed;
   top: 12px;
   right: 20px;
-  z-index: 1000; }
+  z-index: 1000 !important; }
   @media (max-width: 900px) {
     #wps-simple-menu {
       display: block; } }
+
+#wps-menu {
+  z-index: 1000 !important; }
 
 .hero, .hero-trails {
   background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.6)), url("/assets/img/headerBg.png");
